--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.markdown-body {
+  background-color: hsl(0, 0%, 93%);
+  color: #000;
+}
+.markdown-body ul {
+  list-style: disc;
+}
+.markdown-body ol {
+  list-style: numeric;
+}
